# clawnicle

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/benches/: journal_write.rs  runtime_call.rs
bench/src/: lib.rs
crates/clawnicle-cli/: Cargo.toml
crates/clawnicle-cli/src/: main.rs
crates/clawnicle-core/: Cargo.toml
crates/clawnicle-core/src/: budget.rs  cancel.rs  error.rs  event.rs  lib.rs  llm.rs  retry.rs
crates/clawnicle-exec/: Cargo.toml
crates/clawnicle-exec/src/: lib.rs
crates/clawnicle-journal/: Cargo.toml
crates/clawnicle-journal/src/: lib.rs  schema.rs  writer.rs
crates/clawnicle-llm/: Cargo.toml
crates/clawnicle-llm/src/: anthropic.rs  lib.rs  mock.rs  provider.rs
crates/clawnicle-runtime/: Cargo.toml
crates/clawnicle-runtime/src/: context.rs
crates/clawnicle-runtime/tests/: crash_and_resume.rs
docs/: architecture.md  benchmarks.md  resume-demo.tape  zanmu-port-plan.md
docs/blog/: hn-submission.md  launch.md
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/resume-demo/: Cargo.toml
examples/resume-demo/src/: main.rs
examples/summarize-agent/: Cargo.toml
examples/summarize-agent/src/: main.rs
