[workspace]
resolver = "3"
members = [
    "crates/clawnicle-core",
    "crates/clawnicle-journal",
    "examples/hello",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/matthewrahm/clawnicle"
authors = ["Matthew Rahm <matthewdrahm@gmail.com>"]

[workspace.dependencies]
clawnicle-core = { path = "crates/clawnicle-core", version = "0.0.1" }
clawnicle-journal = { path = "crates/clawnicle-journal", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
