[workspace]
resolver = "3"
members = [
    "crates/clawnicle-core",
    "crates/clawnicle-journal",
    "crates/clawnicle-cli",
    "crates/clawnicle-llm",
    "crates/clawnicle-runtime",
    "examples/hello",
    "examples/resume-demo",
    "examples/summarize-agent",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/matthewrahm/clawnicle"
authors = ["Matthew Rahm <matthewdrahm@gmail.com>"]

[workspace.dependencies]
clawnicle-core = { path = "crates/clawnicle-core", version = "0.0.1" }
clawnicle-journal = { path = "crates/clawnicle-journal", version = "0.0.1" }
clawnicle-llm = { path = "crates/clawnicle-llm", version = "0.0.1" }
clawnicle-runtime = { path = "crates/clawnicle-runtime", version = "0.0.1" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
