[package]
name = "clawnicle-cli"
description = "Inspect and replay Clawnicle workflow journals from the terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "clawnicle"
path = "src/main.rs"

[dependencies]
clawnicle-core = { workspace = true }
clawnicle-journal = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
