[package]
name = "clawnicle-journal"
description = "SQLite-backed append-only event journal for Clawnicle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clawnicle-core = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
