[package]
name = "clawnicle-llm"
description = "LLM provider abstraction for Clawnicle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clawnicle-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
