[package]
name = "clawnicle-runtime"
description = "Durable agent runtime — Context API, replay engine, scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clawnicle-core = { workspace = true }
clawnicle-journal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
