[package]
name = "hello-clawnicle"
description = "Smallest workflow trace — writes two events, reads them back"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
clawnicle-core = { workspace = true }
clawnicle-journal = { workspace = true }
serde_json = { workspace = true }
